1.2.1 2007-?-?
== Ini Settings Changes ==
 * new: xcache.admin.enable_auth = On

== ChangeLog ==
 * #86: remove/edit variable in admin page
 * fixed #92: Zend Optimizer compatibility issue
 * fixed #77: hits/misses was not updated
 * fixed #59: pass by reference for internal function was broken
 * fixed #56: xcache_set segfaults when xcache.var_size=0

========
1.2.0 2006-12-10
Ini Settings Changes
========
 * new: xcache.stat = On
 * new: xcache.coverager =  Off
 * chg: xcache.coveragedump_directory default to ""
 * del: xcache.coveragedumper = Off

New APIs
========
 * array xcache_coverager_decode(string data)
 * void  xcache_coverager_start([bool clean = true])
 * void  xcache_coverager_stop([bool clean = false])
 * array xcache_coverager_get([bool clean = false])

ChangeLog
========
 * [290] [291] [292] build with the m4 on solaris
 * [283] removed zend_append_version_info. not needed after [282] 
 * [282] fix possible alloca() scope problem in lock 
 * [281] keep config.nice on make xcachesvnclean 
 * [279] fixed #48, was leaking info when cacher is not enabled by size 
 * [280] [278] trunk: fix coredump on shutdown when loaded as "extension" and after "suhosin" or "zend optimizer". thanks to Alex, Cristian and Esser 
 * [271] fix auto detection of php-cli/php-cgi for test 
 * [270] make [269] pass test cases 
 * [269] do not destruct shallow copied tmp_auto_globals. also improve copying of other hash tables
 * [268] full compatible with auto_globals_jit, no need to disable it in ini from now on 
 * [250] fixed css class on switcher
 * [231] fix zval reference handling
 * [230] update dprint support, added configure option: --enable-xcache-dprint
 * [228] more robust coverager
 * [227] cacher: remove redundant open_basedir check which broke php-src/ext/standard/tests/file/bug24313.phpt 
 * [221] cacher: fix eleak in op_array non-shadow-copy (readonly_protection=on)
 * [220] fixed #36, Bug in inherited static class variables